--- a/CSS/search.css
+++ b/CSS/search.css
@@ -2,39 +2,43 @@
   margin: 25px 0 32px 55px;
 }
 
-.bloc-text p {
-  font-size: 23px;
-  line-height: 0;
-}
-  
 .forms {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  margin: 0 0 20px 55px;
-  width: 30%;
+  margin: 0 0 20px 57px;
   max-width: 100%;
+  width: 0%;
 }
  
 .forms i.fa-solid.fa-location-dot {
   background-color: var(--color-clear-gray);
   border-top-left-radius: 12px;
   border-bottom-left-radius: 12px;
-  padding: 22px;
-  font-size: 25px;
+  padding: 16px;
+  font-size: 18px; 
 }
  
 .forms input {
+  display: flex;
   background-color: #FFFFFF;
   font-weight: bold;
   color: #000000;
-  padding-left: 12px;
-  font-size: 27px; 
+  /*
+  font-size: 17px;
   max-width: 100%;
+  */
   border: 1px solid var(--color-clear-gray);
-  padding: 17px;
+  padding-top: 14px;
+  
+  padding-bottom: 14px;
+  padding-left: 14px;
+  padding: 16px 24px;
+  box-sizing: border-box;
+  width: 224px;
+  font-size: 17px;
 }
- 
+
 .forms .search {
   background-color: var(--color-blue);
   color: #FFFFFF;
@@ -42,8 +46,8 @@
   font-weight: bold;
   border-bottom-right-radius: 15px;
   border-top-right-radius: 15px;
-  padding: 20px;
-  font-size: 22px;
+  padding: 16px;
+  font-size: 17px;
 }
 
 #btn-mobile {
@@ -57,8 +61,8 @@
 }
 
 .filters h3 {
-  margin: 0 30px 0 55px;
-  font-size: 25px;
+  margin: 0 30px 0 57px;
+  font-size: 19px;
 }
 
 .filters ul {
@@ -82,18 +86,24 @@
   align-items: center;
   background-color: var(--color-clear-blue);
   color: var(--color-blue);
-  border-radius: 30px;
-  font-size: 22px;
-  padding: 21px;
-  position: absolute; 
+  border-radius: 50%;
+  font-size: 19px;
+  height: 50px;
+  width: 50px;
+  position: absolute;
+  justify-content: center;
 }
- 
+
+i.fa-solid.fa-money-bill-wave {
+  font-size: 17px;
+}
+
 .filters ul li a {
   text-decoration: none;
-  font-size: 24px;
+  font-size: 18px;
   color: #000000;
   font-weight: bold;
-  padding: 16px 22px 16px 85px;
+  padding: 12px 20px 13px 75px;
 }
 
 .filters ul li a:hover {
@@ -104,11 +114,12 @@
 
 #font-info {
   display: flex;
-  margin-left: 55px; 
+  margin-left: 57px; 
+  margin-bottom: 33px;
 }
  
 #font-info a {
-  font-size: 21px;
+  font-size: 15px;
   color: #000000;
   text-decoration: none;
 }
