--- a/CSS/results.css
+++ b/CSS/results.css
@@ -198,19 +198,21 @@
 
 .bloc-popular .container-cards .card a .card-image {
   position: relative;
+  min-height: 100%;
+  width: 33%;
+  min-width: 33%;
+  max-width: 33%;
 }
 
 .bloc-popular .container-cards .card a .card-image img {
   display: flex;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  display: flex;
   border-top-left-radius: 20px;
   border-bottom-left-radius: 20px;
-  width: 120px;
-  /*
-  max-height: 184px;
-  */
-  height: 150px;
-  overflow: hidden;
-  object-fit: cover;
 }
 
 .bloc-popular .container-cards .card a .card-body {
