--- a/CSS/Responsive/medium_devices.css
+++ b/CSS/Responsive/medium_devices.css
@@ -8,63 +8,48 @@
 
 .bloc-page {
   width: auto;
-  border: 1px solid red;
 }
 
 header {
-    padding-left: 0;
-}
-
-nav {
-  width: auto;
-  text-align: left;
-  padding-right: 80px; 
+    padding-left: 0;  
 }
   
+#logo img {
+  width: 100px;
+}
+
 nav a {
-  padding: 20px;
-}
-  
-  #logo {
-    display: flex;
-    flex-direction: row;
-    align-items: baseline;
-  }
-  
-  #logo img {
-    width: 100px;
-  }
-  
-  nav li {
-    padding-left: 4px;
-      margin-right: 15px;
-    
-  }
-  
-  nav a {
-      font-size: 18px;
-      color: #181818;
-      padding-bottom: 3px;
-      text-decoration: none;
-  }
-  
-  .header-nav #accomodations {
-    color: var(--color-blue);
-    width: 100%;
-  }
-  
-  .header-nav #activity {
-    color: #000000;
-  }
-  
-  .header-nav a:hover {
-    border-top: 2px solid red;
-  }
-  
-.header-nav a.links:hover {
-    border-top: 2px solid blue;
+  font-size: 18px;
+  padding-bottom: 3px;
+  text-decoration: none; 
 }
 
+.header-nav {
+  order: 1;
+  flex-basis: 100%;
+}
+
+.header-nav a {
+  flex-basis: 50%;
+  text-align: center;
+  border-bottom: 3px solid lightgrey;
+}
+
+.header-nav a:hover {
+  border-bottom: 3px solid blue;
+  border-top: transparent;
+}
+
+.header-nav #activity {
+  color: #000000;
+  border-bottom: 3px solid #F2F2F2; 
+}
+
+.header-nav #activity {
+  color: #000000;
+  border-bottom: 3px solid #F2F2F2;
+}
+ 
 
 #font-info a i {
   margin: auto;
@@ -88,10 +73,6 @@ nav a {
   background-color: #FFFFFF;
   font-weight: bold;
   color: #000000;
-  /*
-  font-size: 17px;
-  max-width: 100%;
-  */
   border: 1px solid var(--color-clear-gray);
   padding-top: 14px;
   padding-right: 49px;
@@ -129,6 +110,7 @@ nav a {
   border-radius: 0;
   order: 2;
   background-color: transparent
+
 }
 
 .container .accomodations-marseille .container-cards {
@@ -140,7 +122,7 @@ nav a {
 }
 
 .container .accomodations-marseille .container-cards .card {
-  flex-basis: 100%;
+  flex-basis: 45%;
   opacity: 1;
 }
 
