--- a/CSS/Responsive/small_devices.css
+++ b/CSS/Responsive/small_devices.css
@@ -1,101 +1,98 @@
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 375px) {
 
-  html,
-  body{
-    width:100%;
-    overflow-x:hidden;
-  }
-
-  h1 {
-    font-size: 20px;
+html,
+body{
+  width:100%;
+  overflow-x:hidden;
 }
-  header {
+
+header {
+  padding: 0;
+}
+
+nav {
+display: flex;
+align-items: center;
+flex-basis: 100%;
+}
+
+#logo {
   display: flex;
-  flex-direction: column;
   align-items: center;
-  margin-left: 0;
+  justify-content: center;
+  margin: auto;
 }
 
-#logo{
-  padding-left: 124px;
-}        
-
-.bloc-text {
-  margin-left: 15px
-}
-    
-.forms input{
-  border-right: none;
-  border-left: none;
-  border-top: #F2F2F2 1px solid;
-  border-bottom: #F2F2F2 1px solid;
-  padding: 16px 24px;
-  box-sizing: border-box;
-  width: 224px;
-  font-size: 17px;
-  font-weight: bold;
+.header-nav {
+  flex-basis: 100%;
 }
 
-.forms i.fa-solid.fa-location-dot {
-  background-color: var(--color-clear-gray);
-  border-top-left-radius: 12px;
-  border-bottom-left-radius: 12px;
-  padding: 17px;
-  font-size: 20px;
+.header-nav a {
+  text-align: center;
+  border-bottom: 3px solid lightgrey;
+}
+
+.header-nav a:hover{
+  border-bottom-color: var(--color-blue);
+  border-top: 3px solid transparent;
+}
+
+.header-nav #accomodations {
+  flex-basis: 50%;
+  color: #000000;
+}
+
+.header-nav #activity {
+  flex-basis: 50%;
+  color: #000000;
 }
 
 .forms {
-  margin: 20px 0 20px 30px;
-  position: relative;
-  width: 50%;
+  margin: 0 0 20px 19px;
 }
 
-
-.forms #value {
-  visibility: hidden;
+.forms .input {
+  width: 67%;
 }
 
-.forms #btn-mobile {
-  display: flex;
-  background-color: var(--color-blue);
-  color: #FFFFFF;
-  border: none;
-  border-radius:15px;
-  width: 54px;
+.forms .research {
+  border-radius: 15px;
   height: 54px;
-  margin-left: 157px;
-  float: none;
-  max-width: none;
-  visibility: visible;
-  position: absolute;
-  top: 50%;  
-  left: 50%; 
-  transform: translate(-50%, -50%);
-  padding-top: 18px;
+  padding-top: 17px;
   padding-left: 18px;
-  font-size: 21px;
+  cursor: pointer;
 }
-    
-.forms #btn-mobile i {
-  display: flex;
-}  
+
+.research #search {
+  display: none;
+}
+
+.research #glass {
+  display: block;
+  color: white;
+  font-size: 21px;
+  cursor: pointer;
+}
+
+.bloc-text {
+  margin: 25px 45px 32px 19px;
+}
 
 .filters h3 {
-  margin: 20px 0 0 37px;
-  padding-left: 2px;
+  margin: 20px 0 0 27px;
+  padding-left: 0;
 }
 
 .filters ul {
  padding-left: 0;
 }
 
-#font-info {
-  display: flex;
-  margin-left: 36px;
-  margin-bottom: 33px;
+.filters ul li {
+  margin: 0px 0 20px 19px;
 }
-#font-info a i {
-  margin: auto;
+
+.font-info {
+  margin-left: 23px;
 }
 
 .container {
@@ -148,9 +145,9 @@
 }
 
 .bloc-popular .container-cards .card a .card-body {
-  padding-right: 23px;
+  padding-right: 0;
+  padding-left: 10px;
 }
-
 .container .bloc-popular .container-cards .card a .card-body h3 {
   margin: 0;
   font-size: 16px;
@@ -168,119 +165,84 @@
   opacity: 1;
 }
 
-#read-more a {
-  margin: 0;
-  text-decoration: none;
-  padding: 20px 0 0px 50px;
+.container .accomodations-marseille h2 {
+  padding-left: 22px;
 }
 
-.title-activity h1 {
-  margin: 0px 0 20px 33px;
-  text-align:left;
+.container .accomodations-marseille .container-cards {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 27px;
+  justify-content: center;
+  margin-right: 0px;
+}
+
+.container .accomodations-marseille .container-cards .card {
+  flex-basis: 88%;
+  opacity: 1;
+}
+
+.container .accomodations-marseille .container-cards .card a .card-image img {
+  height: 116px;
+}
+
+#read-more a {
+  padding: 20px 0 0px 30px;
+}
+
+.title-activity h2 {
+  margin: 25px 0 20px 28px;
 }
 
 .activity-container {
-  margin-left: 48px;
+  margin: 0;
 }
 
-
-.activity-container .activity-marseille {
-  width: 85%;
-}
-       
-.activity-container .activity-marseille .container-cards1 {
-  width: 100%;   
-}
-  
 .activity-container .activity-marseille .container-cards1 .card a .card-image img {
   width: 100%;
-  height: 215px;
+  height: 129px;
   object-position: 0;
 }
-  
-.activity-container .activity-marseille .container-cards2 {
-  width: 100%;
-  justify-content: center;
-}
 
-.activity-container .activity-marseille .container-cards2 .card {
-  width: 100%;
-  }
-  
 .activity-container .activity-marseille .container-cards2 .card a .card-image img {
   width: 100%;
-  height: 215px;
+  height: 129px;
   object-position: 0;
 }
 
-.activity-container .activity-marseille .container-cards3 {
-  width: 100%;
-  justify-content: center;
-}
-
-.activity-container .activity-marseille .container-cards3 .card {
-  width: 100%; 
-}
-  
 .activity-container .activity-marseille .container-cards3 .card a .card-image img {
   width: 100%;
-  height: 215px;
+  height: 129px;
   object-position: 0;
-}
-  
-.activity-container .activity-marseille .container-cards4 {
-  width: 100%;
-  height: auto;
-}
-  
-.activity-container .activity-marseille .container-cards4 .card {
-  width: 100%;
-}
-  
-.activity-container .activity-marseille .container-cards4 .card a .card-image img {
-  height: 215px;
-  width: 100%;
-  object-position: 0;
-}
-  
-.activity-container .activity-marseille .container-cards5 {
-  width: 100%;
-  justify-content: center;
 }
 
-.activity-container .activity-marseille .container-cards5 .card {
+.activity-container .activity-marseille .container-cards4 .card a .card-image img {
   width: 100%;
-}
-  
-.activity-container .activity-marseille .container-cards5 .card a .card-image {
-  width: 100%;
-}
-  
-.activity-container .activity-marseille .container-cards5 .card a .card-image img {
-  height: 215px;
+  height: 129px;
   object-position: 0;
 }
-  
-.activity-container .activity-marseille .container-cards6 {
+
+.activity-container .activity-marseille .container-cards5 .card a .card-image img {
   width: 100%;
-  justify-content: center;
+  height: 129px;
+  object-position: 0;
+}
+
+.activity-container .activity-marseille .container-cards6 {
+  margin-bottom: 0;
 }
 
 .activity-container .activity-marseille .container-cards6 .card {
   width: 100%;
+  max-width: 667px;
+  width: 326px;
 }
-  
-.activity-container .activity-marseille .container-cards6 .card a .card-image {
-  width: 100%;
-}
-  
-.activity-container .activity-marseille .container-cards6 .card a .card-image img { 
-  height: 215px;
-  object-position: 0;
-}
-  
-.activity-container .activity-marseille .container-cards6 .card a .card-body {
-  margin-bottom: 12px;
+
+.activity-container .activity-marseille .container-cards6 .card a .card-image img {
+  height: 129px;
+  object-fit: cover;
+  object-position: 44% 34%;
+  max-width: 100%;
 }
 
 footer .footer-container {
